@@ -1,0 +1,36 @@
+/* String copying.
+   Copyright (C) 1995, 2001-2003 Free Software Foundation, Inc.
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2, or (at your option)
+   any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software Foundation,
+   Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+
+#ifndef _STPNCPY_H
+#define _STPNCPY_H
+
+#if HAVE_STPNCPY
+
+/* Get stpncpy() declaration.  */
+#include <string.h>
+
+#else
+
+#include <stddef.h>
+
+/* Copy no more than N characters of SRC to DST, returning the address of
+   the last character written into DST.  */
+extern char *stpncpy (char *dst, const char *src, size_t n);
+
+#endif
+
+#endif /* _STPNCPY_H */
