@@ -1,3 +1,8 @@
+2003-01-29  Bruno Haible  <bruno@clisp.org>
+
+	* modules/stpncpy: New module.
+	* MODULES.html.sh (func_all_modules): Add it.
+
 2003-01-28  Bruno Haible  <bruno@clisp.org>
 
 	* modules/c-ctype: New module.
